--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
+
 body {
     background-color: black;
+}
+
+h1 {
+    text-align: center;
+    font-family: "Titillium Web", "sans-serif";
+    color: white;
+    font-size: 10vw;
 }
